Closed Bug 297594 Opened 21 years ago Closed 20 years ago

Crash closing popup.

Categories

(Core Graveyard :: Embedding: GTK Widget, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jf.rameau, Assigned: mpgritti)

References

()

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.8) Gecko/20050513 Epiphany/1.7.2 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.8) Gecko/20050513 Epiphany/1.7.2 There are two thumbnails on this page which open a popup. The javascript behind the popup closes on either onblur or onclick events. Just before closing, an alert is raised. The crash occurs when the alert is showed. Reproducible: Always Steps to Reproduce: 1. go to http://www.web-toolbox.net/webtoolbox/bilder/06-imagepassend/window-bildmass04.htm 2. click on one of the thumbnails (a popup is raised), 3. click on the popup to close it. Actual Results: Crash Expected Results: Shows the alert. 0x080d56f7 in trap_handler (log_domain=0xb7b833e5 "Gtk", log_level=135285878, message=0x87b6778 "gtk_widget_destroy: assertion `GTK_IS_WIDGET (widget)' failed", user_data=0x0) at ephy-debug.c:109 109 G_BREAKPOINT (); (gdb) where #0 0x080d56f7 in trap_handler (log_domain=0xb7b833e5 "Gtk", log_level=135285878, message=0x87b6778 "gtk_widget_destroy: assertion `GTK_IS_WIDGET (widget)' failed", user_data=0x0) at ephy-debug.c:109 #1 0xb75a40a6 in g_logv () from /usr/lib/libglib-2.0.so.0 #2 0xb75a426c in g_log () from /usr/lib/libglib-2.0.so.0 #3 0xb75a42c5 in g_return_if_fail_warning () from /usr/lib/libglib-2.0.so.0 #4 0xb7b6326f in gtk_widget_destroy () from /usr/lib/libgtk-x11-2.0.so.0 #5 0xb7fe17ec in EmbedPrompter::Run () from /ff/lib/firefox-1.0+/libgtkembedmoz.so #6 0xb7fe235a in GtkPromptService::Alert () from /ff/lib/firefox-1.0+/libgtkembedmoz.so #7 0xb68c471a in nsPrompt::Alert () from /ff/lib/firefox-1.0+/components/libembedcomponents.so #8 0xb66e1aa6 in nsGlobalWindow::Alert () Comment on irc: (23:21:48) chpe: EmbedPrompter::Create(PromptType aType, GtkWindow* aParentWindow) (23:21:48) chpe: { (23:21:48) chpe: mWindow = gtk_dialog_new_with_buttons(mTitle.get(), aParentWindow, (23:21:48) chpe: GTK_DIALOG_DESTROY_WITH_PARENT, (23:21:52) chpe: hmmm (23:22:05) chpe: that's a problem (23:22:54) chpe: it should weakref the dialogue or maybe ref it
Attached patch fixSplinter Review
Just remove the DESTROY_WITH_PARENT flag, so the dialogue actually gets shown.
Attachment #186147 - Flags: superreview?(blizzard)
Attachment #186147 - Flags: review?(mpgritti)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #186147 - Flags: superreview?(blizzard) → superreview+
Attachment #186147 - Flags: review?(mpgritti) → review+
Comment on attachment 186147 [details] [diff] [review] fix This is a simple crash fix, no risk.
Attachment #186147 - Flags: approval1.8b3?
Attachment #186147 - Flags: approval1.8b3? → approval1.8b3+
Checking in embedding/browser/gtk/src/EmbedPrompter.cpp; /cvsroot/mozilla/embedding/browser/gtk/src/EmbedPrompter.cpp,v <-- EmbedPrompter.cpp new revision: 1.17; previous revision: 1.16 done
Attachment #186147 - Flags: approval1.7.9?
Attachment #186147 - Flags: approval-aviary1.0.5?
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b3) Gecko/20050710 Firefox/1.0+ ID:2005071017 This now appears to WFM. Resolved fixed?
Yes, it's checked in on trunk, resolving FIXED.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment on attachment 186147 [details] [diff] [review] fix 1.0.5 and 1.7.9 have already shipped; unsetting approval requests.
Attachment #186147 - Flags: approval1.7.9?
Attachment #186147 - Flags: approval-aviary1.0.5?
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: