Bug 297594 Crash closing popup (gtkmozembed) patch by chpe@gnome.org r=mpgritti sr=blizzard a=asa